<resources>
    <string name="app_name">Green Life</string>

    <string name="reminder_card_title">Reminders</string>
    <string name="reminder_card_subtitle">Add reminders to know when to throw out trash</string>

    <string name="tutorial_card_title">Tutorials</string>
    <string name="tutorial_card_subtitle">Now sure how the app works? Click here to find out!</string>

    <string name="info_card_title">Info</string>
    <string name="info_card_subtitle">About us</string>
    <string name="recyclingtip">RecyclingTip</string>
    <string name="see_instructions">See instructions!</string>
    <string name="scan_something">scan something</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="developer_greenlife_com">developer@greenlife.com</string>
    <string name="logout">Logout</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="rePassword">Retype password</string>
    <string name="first_name">First name</string>
    <string name="lastname">Last name</string>
    <string name="register">Register</string>
</resources>